[project]
name = "mtp_otf"
version = "0.0.1"
authors = [
  { name="Eugène Sanscartier", email="eugene.sanscartier@gmail.com" },
]
description = "A package for on-the-fly mtp"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

requires-python = ">=3.9"
dependencies = [
  "ase",
  "numpy",
]

[project.scripts]
create-otf-state = "mtp_otf.create_otf_state:main"
otf-mtp = "mtp_otf.__main__:main"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
